# pkg/api/sgroups/api_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.2.0
-// - protoc             v3.21.4
+// - protoc             v3.21.12
 // source: sgroups/api.proto
 
 package sgroups
@@ -25,6 +25,12 @@ const _ = grpc.SupportPackageIsVersion7
 type SecGroupServiceClient interface {
 	//synchronize security rules
 	Sync(ctx context.Context, in *SyncReq, opts ...grpc.CallOption) (*emptypb.Empty, error)
+	//gets status after sync operation
+	SyncStatus(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*SyncStatusResp, error)
+	//lists networks
+	ListNetworks(ctx context.Context, in *ListNetworksReq, opts ...grpc.CallOption) (*ListNetworksResp, error)
+	//lists security groups
+	ListSecurityGroups(ctx context.Context, in *ListSecurityGroupsReq, opts ...grpc.CallOption) (*ListSecurityGroupsResp, error)
 	//get subnet(s) for SG
 	GetSgSubnets(ctx context.Context, in *GetSgSubnetsReq, opts ...grpc.CallOption) (*GetSgSubnetsResp, error)
 	//find security rules for direction SG --> SG
@@ -46,6 +52,33 @@ func NewSecGroupServiceClient(cc grpc.ClientConnInterface) SecGroupServiceClient
 func (c *secGroupServiceClient) Sync(ctx context.Context, in *SyncReq, opts ...grpc.CallOption) (*emptypb.Empty, error) {
 	out := new(emptypb.Empty)
 	err := c.cc.Invoke(ctx, "/hbf.v1.sgroups.SecGroupService/Sync", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *secGroupServiceClient) SyncStatus(ctx context.Context, in *emptypb.Empty, opts ...grpc.CallOption) (*SyncStatusResp, error) {
+	out := new(SyncStatusResp)
+	err := c.cc.Invoke(ctx, "/hbf.v1.sgroups.SecGroupService/SyncStatus", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *secGroupServiceClient) ListNetworks(ctx context.Context, in *ListNetworksReq, opts ...grpc.CallOption) (*ListNetworksResp, error) {
+	out := new(ListNetworksResp)
+	err := c.cc.Invoke(ctx, "/hbf.v1.sgroups.SecGroupService/ListNetworks", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *secGroupServiceClient) ListSecurityGroups(ctx context.Context, in *ListSecurityGroupsReq, opts ...grpc.CallOption) (*ListSecurityGroupsResp, error) {
+	out := new(ListSecurityGroupsResp)
+	err := c.cc.Invoke(ctx, "/hbf.v1.sgroups.SecGroupService/ListSecurityGroups", in, out, opts...)
 	if err != nil {
 		return nil, err
 	}
@@ -94,6 +127,12 @@ func (c *secGroupServiceClient) GetSecGroupForAddress(ctx context.Context, in *G
 type SecGroupServiceServer interface {
 	//synchronize security rules
 	Sync(context.Context, *SyncReq) (*emptypb.Empty, error)
+	//gets status after sync operation
+	SyncStatus(context.Context, *emptypb.Empty) (*SyncStatusResp, error)
+	//lists networks
+	ListNetworks(context.Context, *ListNetworksReq) (*ListNetworksResp, error)
+	//lists security groups
+	ListSecurityGroups(context.Context, *ListSecurityGroupsReq) (*ListSecurityGroupsResp, error)
 	//get subnet(s) for SG
 	GetSgSubnets(context.Context, *GetSgSubnetsReq) (*GetSgSubnetsResp, error)
 	//find security rules for direction SG --> SG
@@ -111,6 +150,15 @@ type UnimplementedSecGroupServiceServer struct {
 
 func (UnimplementedSecGroupServiceServer) Sync(context.Context, *SyncReq) (*emptypb.Empty, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Sync not implemented")
+}
+func (UnimplementedSecGroupServiceServer) SyncStatus(context.Context, *emptypb.Empty) (*SyncStatusResp, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method SyncStatus not implemented")
+}
+func (UnimplementedSecGroupServiceServer) ListNetworks(context.Context, *ListNetworksReq) (*ListNetworksResp, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ListNetworks not implemented")
+}
+func (UnimplementedSecGroupServiceServer) ListSecurityGroups(context.Context, *ListSecurityGroupsReq) (*ListSecurityGroupsResp, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method ListSecurityGroups not implemented")
 }
 func (UnimplementedSecGroupServiceServer) GetSgSubnets(context.Context, *GetSgSubnetsReq) (*GetSgSubnetsResp, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetSgSubnets not implemented")
@@ -151,6 +199,60 @@ func _SecGroupService_Sync_Handler(srv interface{}, ctx context.Context, dec fun
 	}
 	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
 		return srv.(SecGroupServiceServer).Sync(ctx, req.(*SyncReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _SecGroupService_SyncStatus_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(emptypb.Empty)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SecGroupServiceServer).SyncStatus(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/hbf.v1.sgroups.SecGroupService/SyncStatus",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SecGroupServiceServer).SyncStatus(ctx, req.(*emptypb.Empty))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _SecGroupService_ListNetworks_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListNetworksReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SecGroupServiceServer).ListNetworks(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/hbf.v1.sgroups.SecGroupService/ListNetworks",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SecGroupServiceServer).ListNetworks(ctx, req.(*ListNetworksReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _SecGroupService_ListSecurityGroups_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ListSecurityGroupsReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(SecGroupServiceServer).ListSecurityGroups(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/hbf.v1.sgroups.SecGroupService/ListSecurityGroups",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(SecGroupServiceServer).ListSecurityGroups(ctx, req.(*ListSecurityGroupsReq))
 	}
 	return interceptor(ctx, in, info, handler)
 }
@@ -237,6 +339,18 @@ var SecGroupService_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Sync",
 			Handler:    _SecGroupService_Sync_Handler,
+		},
+		{
+			MethodName: "SyncStatus",
+			Handler:    _SecGroupService_SyncStatus_Handler,
+		},
+		{
+			MethodName: "ListNetworks",
+			Handler:    _SecGroupService_ListNetworks_Handler,
+		},
+		{
+			MethodName: "ListSecurityGroups",
+			Handler:    _SecGroupService_ListSecurityGroups_Handler,
 		},
 		{
 			MethodName: "GetSgSubnets",
